--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -181,7 +181,12 @@
 
 		<!-- ------------------------- GRAPHIC: Maps of rainfall deficiency from 2017 -------------------------- -->
 
+		<div class="trigger" data-space-above="75" data-space-below="25"></div>
+
+		<!-- ------------------------- GRAPHIC: Maps of rainfall deficiency from 2018 -------------------------- -->
+
 		<div class="trigger" data-space-above="75" data-space-below="0"></div>
+
 
 
 		<div class="isolation_block">
