--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -26,7 +26,7 @@
 
 	<div class="editorial_container">
 
-		<div class="bylines"><a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a> and <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a></div>
+		<div class="bylines"><a href="https://www.theguardian.com/profile/gabrielle-chan">Gabrielle Chan</a>, <a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a>, <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a> and <a href="">Mike Bowers</a></div>
 
 		<ul class="share-list">
 			<li class="social__item social__item--facebook" data-link-name="facebook">
