--- a/src/css/new/timeline.scss
+++ b/src/css/new/timeline.scss
@@ -94,11 +94,11 @@
 }
 
 .anomolies--positive {
-    fill: #1413db;
+    fill: #67a9cf;
 }
 
 .anomolies--negative {
-    fill: #ff1a22;
+    fill: #b2182b;
 }
 
 .anomolies_container {
