--- a/src/css/new/vizualization.scss
+++ b/src/css/new/vizualization.scss
@@ -103,15 +103,12 @@
 
 }
 
-
-
-
 .bar--positive {
-    fill: darkorange;
+    fill: #b2182b;
 }
 
 .bar--negative {
-    fill: steelblue;
+    fill: #67a9cf;
 }
 
 .axis text {
