--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -146,7 +146,7 @@
 
 		<div class="isolation_block">
 
-			<p>A far greater amount of land is used for grazing, relying on areas of native vegetation further inland.</p>
+			<p>A far greater amount of land  is used for grazing, relying on areas of native vegetation further inland.</p>
 
 		</div>
 
@@ -310,7 +310,7 @@
 
 		<div class="breakout_block">
 
-			<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall deficiency, with maps showing drier and wetter areas:</p>
+			<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall anomaly, that is how high or low a given year is in relation to the long-term average. The maps show the geographic distribution of rainfall, or lack of rainfal:</p>
 
 		</div>
 
@@ -323,7 +323,7 @@
 
 			<div class="trigger" data-space-above="0" data-space-below="0"></div>
 
-			<div class="anomolies_header">Timeline of weather anomolies (1900 - 2018)</div>
+			<div class="anomolies_header">Timeline of rainfall anomaly</div>
 
 			<div class="anomolies_container">
 
