--- a/src/css/new/preloader.scss
+++ b/src/css/new/preloader.scss
@@ -6,11 +6,11 @@
 	bottom: 0px;
 	position: relative;
 	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	background-size: 135px 135px;
-	z-index: 1000;
-	position: fixed;
-	background-color: black;
-	opacity: 1;
-	background-image: url("https://interactive.guim.co.uk/embed/aus/2018/feb/mdb-multimedia/preloader/Webp.net-gifmaker.gif");
+    background-position: 50% 50%;
+    background-size: 135px 135px;
+    z-index: 1000;
+    position: fixed;
+    background-color: black;
+    opacity: 1;
+	background-image: url('https://interactive.guim.co.uk/embed/aus/2018/feb/mdb-multimedia/preloader/Webp.net-gifmaker.gif');
 }
