--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,7 @@
 @import "new/footer";
 @import "new/multimedia";
 @import "new/preloader";
+@import "new/textspans";
 
 /*
 @import "interactive";
