--- a/src/css/new/textspans.scss
+++ b/src/css/new/textspans.scss
@@ -1,27 +1,43 @@
 span.darkRed {
-	border-bottom: 2px solid #fc8d62;
+	border-bottom: 2px solid #b2182b;
 }
 
 span.darkOrange {
-	border-bottom: 2px solid #66c2a5;
+	border-bottom: 2px solid #ef8a62;
 }
 
 span.lightOrange {
-	border-bottom: 2px solid #b51800;
+	border-bottom: 2px solid #fddbc7;
 }
 
 span.neutralGray {
-	border-bottom: 2px solid #005689;
+	border-bottom: 2px solid #f7f7f7;
 }
 
 span.lightBlue {
-	border-bottom: 2px solid #767676;
+	border-bottom: 2px solid #d1e5f0;
 }
 
 span.mediumBlue {
-	border-bottom: 2px solid #b82266;
+	border-bottom: 2px solid #67a9cf;
 }
 
 span.darkBlue {
-	border-bottom: 2px solid #767676;
+	border-bottom: 2px solid #2166ac;
+}
+
+span.yellow {
+	border-bottom: 2px solid #FFD37F;
+}
+
+span.green {
+	border-bottom: 2px solid #C7D79E;
+}
+
+span.otherBlue{
+	border-bottom: 2px solid #7AB6F5;
+}
+
+span.pink {
+	border-bottom: 2px solid #FFBEE8;
 }
