Switch controls over to ractive

--- a/src/css/new/vizualization.scss
+++ b/src/css/new/vizualization.scss
@@ -66,6 +66,16 @@
     position: relative;
 }
 
+
+.NRM_clusters_display .clusters {
+    opacity: 1!important;
+}
+
+.NRM_sub_clusters_display .sub_clusters {
+    opacity: 1!important;
+}
+
+
 #special_container {
 	width: 100%;
 	display: inline-block;
