--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -421,6 +421,8 @@
 
 			<p>However, the predictions around temperature and evaporation are comparatively very clear: every part of Australia will continue to experience <span class="darkRed">increases in average temperature</span>, and will have a higher frequency of hot days.</p>
 
+			<p>This will also result in higher evaporation across Australia, which will continue to make drought conditions worse in the future.</p>
+
 		</div>
 
 	</div>
@@ -434,7 +436,15 @@
 
 		<div class="breakout_block">
 
-			<p>This will also result in higher evaporation across Australia, which will continue to make drought conditions worse in the future.</p>
+			<div class="inline_column_image">
+					<div class="inline_block">
+						<img class="imagine" src="{{filepath}}/images/drought-6.jpg">
+					</div>
+			</div>
+
+			<div class="picture_caption captivate">
+					Cracked dirt roadway near Tambo, Queensland Australia. Photograph: Mike Bowers for Guardian Australia
+			</div>
 
 			<p>None of this is easy information for regional and metropolitan Australia to digest. But if this is the new normal, governments, communities and individual operators will need to consider their options.</p>
 
