--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,5 +1,7 @@
-<div id="climate_interactive" class="interactive">
+<div id="climate_interactive" class="interactive-wrapper interactive">
 
-	<div id="interactive_preloader"></div>
+	<div id="interactive_preloader">
+		<div id="console_panel"></div>
+	</div>
 
 </div>
