--- a/src/css/new/timeline.scss
+++ b/src/css/new/timeline.scss
@@ -5,7 +5,7 @@
 	text-align: center;
 	font-family: 'Guardian Text Sans Web', TextSans, Arial, sans-serif;
 	font-size: 20px;
-	
+	background-size: cover;
 
 	@include mq($until: tablet) {
 		width: 100%;
