--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -50,7 +50,7 @@
 
 			<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="<%= path %>/assets/images/drought-4.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-4.jpg">
 					</div>
 				</div>
 
@@ -88,7 +88,7 @@
 
 				<div class="picture_frame">
 
-					<img class="imagine" src="<%= path %>/assets/images/drought-1.jpg">
+					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-1.jpg">
 
 				</div>
 
@@ -113,7 +113,7 @@
 
 			<div id="image_block">
 
-				{{#if map_display}}<div id="image_inside" style="background-image: url(<%= path %>/assets/{{map_src}})"></div>{{/if}}
+				{{#if map_display}}<div id="image_inside" style="background-image: url(https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/{{map_src}})"></div>{{/if}}
 
 			</div>
 
@@ -235,7 +235,7 @@
 
 				<div class="picture_frame">
 
-					<img class="imagine" src="<%= path %>/assets/images/drought-2.jpg">
+					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-2.jpg">
 
 				</div>
 
@@ -260,7 +260,7 @@
 
 				<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="<%= path %>/assets/images/drought-5.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-5.jpg">
 					</div>
 				</div>
 
@@ -343,7 +343,7 @@
 
 			<div class="picture_frame">
 
-				<img class="imagine" src="<%= path %>/assets/images/drought-3.jpg">
+				<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-3.jpg">
 
 			</div>
 
@@ -432,7 +432,7 @@
 
 			<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="<%= path %>/assets/images/drought-6.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-6.jpg">
 					</div>
 			</div>
 
