--- a/src/css/new/footer.scss
+++ b/src/css/new/footer.scss
@@ -12,7 +12,11 @@
       margin: 1em 10px; }
 
       .credits {
-        padding: 10px;
+       /* padding: 10px;*/
+      }
+
+      .credits-inner {
+        margin-left: 10px;
       }
 
     .interactive .footer:after {
