--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -26,7 +26,7 @@
 
 	<div class="editorial_container">
 
-		<div class="bylines"><a href="https://www.theguardian.com/profile/gabrielle-chan">Gabrielle Chan</a>, <a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a>, <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a> and <a href="">Mike Bowers</a></div>
+		<div class="bylines"><a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a>, <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a>, <a href="https://www.theguardian.com/profile/gabrielle-chan">Gabrielle Chan</a>, and <a href="">Mike Bowers</a></div>
 
 		<ul class="share-list">
 			<li class="social__item social__item--facebook" data-link-name="facebook">
@@ -252,7 +252,7 @@
 
 				<p>Since European occupation of Australia, there have been at least seven other major drought events.</p>
 
-				<p>While some of these droughts pre-date the systematic collection of temperature records that started in 1900, climate researchers have use innovative techniques to reconstruct rainfall records for a period of Australian history covering the past 800 years.</p>
+				<p>While some of these droughts pre-date the systematic collection of temperature records that started in 1900, climate researchers have used innovative techniques to reconstruct rainfall records for a period of Australian history covering the past 800 years.</p>
 
 				<p>Mandy Freund is a climate scientist at the University of Melbourne who led an innovative research project that <a href="https://theconversation.com/recent-australian-droughts-may-be-the-worst-in-800-years-94292" target="_blank">used tree rings, ice cores and corals to reconstruct rainfall records over a long period</a>, with the aim of examining climate variability in Australia.</p>
 
@@ -313,7 +313,7 @@
 
 		<div class="breakout_block">
 
-			<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall "anomaly", that is how <span class="mediumBlue">high</span> or <span class="darkRed">low</span> the total for a given year is in relation to the long-term average. The maps show the geographic distribution of rainfall, or lack of rainfal:</p>
+			<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall "anomaly", that is how <span class="mediumBlue">high</span> or <span class="darkRed">low</span> the total for a given year is in relation to the long-term average. The maps show the geographic distribution of rainfall, or lack of rainfall:</p>
 
 		</div>
 
@@ -442,7 +442,7 @@
 
 			<p>None of this is easy information for regional and metropolitan Australia to digest. But if this is the new normal, governments, communities and individual operators will need to consider their options.</p>
 
-			<p><em>In the next part, we will hear from the communities affected by the big dry.</em></p>
+			<p><em>In part 2 of The New Normal we will hear from the people affected by drought. The New Normal is part of <a href="https://www.theguardian.com/environment/series/our-wide-brown-land">Our wide brown land series</a>, made possible thanks to support from our readers</em></p>
 
 		</div>
 
@@ -462,6 +462,21 @@
 				<p class="gia-byline"><span>Design and development:</span> <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a> and <a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a></p>
 			</div>
 		</div>
+
+		<div class="credits col50">
+			<h2>Sources and references</h2>
+			<div class="credits-inner">
+				<p>Rainfall and soil moisture data - <a href="http://www.bom.gov.au/water/landscape/#/sm/Actual/day/-28.4/130.4/3/Point////2018/10/1/">Australian Landscape Water Balance</a></p>
+				<p>Climate change projects and map files - <a href="https://www.climatechangeinaustralia.gov.au/en/">Climate Change in Australia</a></p>
+				<p><a href="http://www.bom.gov.au/climate/change/index.shtml#tabs=Tracker&tracker=timeseries">Temperature anomaly data</a>, <a href="http://www.bom.gov.au/climate/history/rainfall/">rainfall maps</a>, and <a href="http://www.bom.gov.au/climate/change/#tabs=Tracker&tracker=timeseries&tQ=graph%3Drain%26area%3Daus%26season%3D0112%26ave_yr%3D0">rainfall anomaly data</a> - Bureau of Meteorology
+				</p>
+				<p><a href="https://fingfx.thomsonreuters.com/gfx/rngs/AUSTRALIA-DROUGHT/010071MC33G/index.html">The cancer eating away at farms</a> - Reuters</p>
+				<p><a href="http://www.abc.net.au/news/2014-02-26/100-years-of-drought/5282030">Interactive: 100 years of drought in Australia</a> - ABC</p>
+				<p><a href="https://theconversation.com/recent-australian-droughts-may-be-the-worst-in-800-years-94292">Recent Australian droughts may be the worst in 800 years</a> - The Conversation</p>
+				<p><a href="https://theconversation.com/is-australias-current-drought-caused-by-climate-change-its-complicated-97867">Is Australia’s current drought caused by climate change? It’s complicated</a> - The Conversation</p>
+			</div>
+		</div>
+
 
 		<div class="credits_read_more"><h2>Read more</h2></div>
 		<ul class="footer-grid">
