--- a/src/css/multimedia.scss
+++ b/src/css/multimedia.scss
@@ -11,7 +11,8 @@
 	position: relative;
 }
 .picture_caption {
-	font-size: 0.8rem;
+	font-size: 12px;
+	line-height: 16px;
 	font-family: "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	margin-bottom: 20px;
 }
