--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -28,16 +28,12 @@
 
 		<div class="bylines"><a href="https://www.theguardian.com/profile/gabrielle-chan">Gabrielle Chan</a>, <a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a>, <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a> and <a href="">Mike Bowers</a></div>
 
-		<ul class="share-list">
-			<li class="social__item social__item--facebook" data-link-name="facebook">
-				<span class="inline-share-facebook inline-icon rounded-icon centered-icon social-icon social-icon--facebook"><svg class="rounded-icon__svg centered-icon__svg social-icon__svg social-icon--facebook__svg inline-share-facebook__svg inline-icon__svg" height="50" viewbox="-2 -2 32 32" width="50">
-				<path d="M17.9 14h-3v8h-2.9v-8h-2v-2.9h2v-2.4c0-1.9 1.1-3.7 4-3.7 1.2 0 2 .1 2 .1v3h-1.8c-1 0-1.2.5-1.2 1.3v1.8h3l-.1 2.8z"></path></svg></span>
-			</li>
-			<li class="social__item social__item--twitter" data-link-name="twitter">
-				<span class="inline-share-twitter inline-icon rounded-icon centered-icon social-icon social-icon--twitter"><svg class="rounded-icon__svg centered-icon__svg social-icon__svg social-icon--twitter__svg inline-share-twitter__svg inline-icon__svg" height="50" viewbox="-2 -2 32 32" width="50">
-				<path d="M21.3 10.5v.5c0 4.7-3.5 10.1-9.9 10.1-2 0-3.8-.6-5.3-1.6.3 0 .6.1.8.1 1.6 0 3.1-.6 4.3-1.5-1.5 0-2.8-1-3.3-2.4.2 0 .4.1.7.1l.9-.1c-1.6-.3-2.8-1.8-2.8-3.5.5.3 1 .4 1.6.4-.9-.6-1.6-1.7-1.6-2.9 0-.6.2-1.3.5-1.8 1.7 2.1 4.3 3.6 7.2 3.7-.1-.3-.1-.5-.1-.8 0-2 1.6-3.5 3.5-3.5 1 0 1.9.4 2.5 1.1.8-.1 1.5-.4 2.2-.8-.3.8-.8 1.5-1.5 1.9.7-.1 1.4-.3 2-.5-.4.4-1 1-1.7 1.5z"></path></svg></span>
-			</li>
-		</ul>
+        <div class="share-buttons">
+            <div class="social_isolation">
+                <button class="interactive-share" data-network="facebook" on-click="['social', 'facebook']"></button>
+                <button class="interactive-share" data-network="twitter" on-click="['social', 'twitter']"></button>
+            </div>
+        </div>
 
 		<div class="standfirst">
 			<p><span class="drop-cap"><span class="drop-cap__inner">T</span></span>he hardest part of drought is the retreat. Communities withdraw into their shell. Workers leave town as they lose jobs and often housing, animals are sent away, class sizes drop, activity shrinks, dust drifts in through every crack in the house. It’s slow, which is why it messes with your head, creeping forward until something snaps and what begins as confusion reaches consensus.</p>
@@ -111,7 +107,7 @@
 
 		<div id="image_container">
 
-			<div id="image_block">
+			<div id="image_block" style="max-width:{{max_width}}px">
 
 				{{#if map_display}}<div id="image_inside" style="background-image: url(https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/{{map_src}})"></div>{{/if}}
 
@@ -121,7 +117,7 @@
 
 		<div id="map_container">
 
-			<div id="map_block">
+			<div id="map_block" style="max-width:{{max_width}}px">
 
 				<div id="map" class="{{#if NRM_clusters_display}} NRM_clusters_display {{else}} clusterhide {{/if}} {{#if NRM_sub_clusters_display}} NRM_sub_clusters_display {{else}} subclusterhide {{/if}}"></div>
 
