--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -16,7 +16,7 @@
 
 		<div class="titles">
 			<h1>The new normal?<br>How climate change is making droughts worse</h1>
-			<h3>In the first part of a new series, we're going to take you through the current drought conditions, and then put them in historical context with other severe droughts in Australia.</h3>
+			<h3>In the first part of a new series, we take you through the current conditions, and then put them in context with other severe droughts in Australia’s history</h3>
 		</div>
 
 
