--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -26,7 +26,7 @@
 
 	<div class="editorial_container">
 
-		<div class="bylines"><a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a>, <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a>, <a href="https://www.theguardian.com/profile/gabrielle-chan">Gabrielle Chan</a>, and <a href="">Mike Bowers</a></div>
+		<div class="bylines"><a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a>, <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a>, <a href="https://www.theguardian.com/profile/gabrielle-chan">Gabrielle Chan</a>, and <a href="https://www.theguardian.com/profile/mike-bowers">Mike Bowers</a></div>
 
         <div class="share-buttons">
             <div class="social_isolation">
