--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -6,7 +6,7 @@
 
 			<div class="semi__transparent__gradient__overlay"></div>
 
-			<div data-vid="intro" data-video="intro" data-type="intro" class="video-wrapper">
+			<div data-vid="intro" data-video="intro" data-type="intro" class="video-wrapper vactive">
 
 				<video id="intro" muted playsinline loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/1024/intro_1024.jpg"></video>
 
