Resized images for mobile

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -8,7 +8,7 @@
 
 			<div data-vid="intro" data-video="intro" data-type="intro" class="video-wrapper vactive">
 
-				<video id="intro" muted playsinline loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/1024/intro_1024.jpg"></video>
+				<video id="intro" muted playsinline loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/intro.jpg"></video>
 
 			</div>
 
@@ -46,7 +46,7 @@
 
 			<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-4.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-4.jpg">
 					</div>
 				</div>
 
@@ -84,7 +84,7 @@
 
 				<div class="picture_frame">
 
-					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-1.jpg">
+					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-1.jpg">
 
 				</div>
 
@@ -109,7 +109,7 @@
 
 			<div id="image_block" style="max-width:{{max_width}}px">
 
-				{{#if map_display}}<div id="image_inside" style="background-image: url(https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/{{map_src}})"></div>{{/if}}
+				{{#if map_display}}<div id="image_inside" style="background-image: url(https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/maps/{{prefix}}/{{map_src}})"></div>{{/if}}
 
 			</div>
 
@@ -231,7 +231,7 @@
 
 				<div class="picture_frame">
 
-					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-2.jpg">
+					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-2.jpg">
 
 				</div>
 
@@ -256,7 +256,7 @@
 
 				<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-5.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-5.jpg">
 					</div>
 				</div>
 
@@ -339,7 +339,7 @@
 
 			<div class="picture_frame">
 
-				<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-3.jpg">
+				<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-3.jpg">
 
 			</div>
 
@@ -428,7 +428,7 @@
 
 			<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/drought-6.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-6.jpg">
 					</div>
 			</div>
 
