--- a/src/css/new/footer.scss
+++ b/src/css/new/footer.scss
@@ -1,3 +1,11 @@
+#footer {
+  width: 100%;
+  max-width: 1300px;
+  background-color: white;
+  z-index: 9999;
+  position: relative;
+}
+
   .interactive .no-data {
     clear: both;
     font-style: italic;
