--- a/src/css/new/vizualization.scss
+++ b/src/css/new/vizualization.scss
@@ -11,6 +11,18 @@
     z-index: 2;
 }
 
+.version_control {
+    width: 100%;
+    margin-top: 10px;
+    text-align: center;
+    font-family: "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 12px;
+    color: darkgrey;
+    z-index: 9999999;
+    position: relative;
+    margin-bottom: 20px;
+}
+
 #map_container {
     overflow: hidden; 
     width: 100%;
