Added mobile version

--- a/src/templates/lite.html
+++ b/src/templates/lite.html
@@ -8,7 +8,7 @@
 
 			<div data-vid="intro" data-video="intro" data-type="intro" class="video-wrapper vactive">
 
-				<video id="intro" muted playsinline loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/intro.jpg"></video>
+				<video id="intro" muted playsinline loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/intro.jpg"></video>
 
 			</div>
 
@@ -46,7 +46,7 @@
 
 			<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-4.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/drought-4.jpg">
 					</div>
 			</div>
 
@@ -84,7 +84,7 @@
 
 				<div class="picture_frame">
 
-					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-1.jpg">
+					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/drought-1.jpg">
 
 				</div>
 
@@ -150,15 +150,13 @@
 
 	<!-- ------------------------- Trigger draught maps -------------------------- -->
 
-	<div class="trigger" data-space-above="75" data-space-below="0"></div>
-
 	<div class="fullscreen_container">
 
 			<div class="multimedia_container hero">
 
 				<div class="picture_frame">
 
-					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-2.jpg">
+					<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/drought-2.jpg">
 
 				</div>
 
@@ -183,7 +181,7 @@
 
 				<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-5.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/drought-5.jpg">
 					</div>
 				</div>
 
@@ -211,7 +209,7 @@
 
 				<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall "anomaly", that is how <span class="mediumBlue">high</span> or <span class="darkRed">low</span> the total for a given year is in relation to the long-term average. The maps show the geographic distribution of rainfall, or lack of rainfall:</p>
 
-				<div id="anomalies_block"></div>
+				<div id="anomolies_block"></div>
 
 			</div>
 
@@ -226,7 +224,7 @@
 
 			<div class="picture_frame">
 
-				<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-3.jpg">
+				<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/drought-3.jpg">
 
 			</div>
 
@@ -304,7 +302,7 @@
 
 			<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/{{prefix}}/drought-6.jpg">
+						<img class="imagine" src="https://interactive.guim.co.uk/embed/aus/2018/oct/climate-change/images/400/drought-6.jpg">
 					</div>
 			</div>
 
@@ -321,8 +319,6 @@
 	</div>
 
 	<!-- ------------------------- Reset -------------------------- -->
-
-	<div class="trigger" data-space-above="50" data-space-below="0"></div>
 
 	<div class="footer" id="footer">
 		
@@ -400,6 +396,6 @@
 		
 	</div>
 
-	<div class="version_control"><small>version 1.2</small></div>
+	<div class="version_control"><small>version 1.3</small></div>
 
 </div>
