--- a/src/templates/lite.html
+++ b/src/templates/lite.html
@@ -209,6 +209,8 @@
 
 				<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall "anomaly", that is how <span class="mediumBlue">high</span> or <span class="darkRed">low</span> the total for a given year is in relation to the long-term average. The maps show the geographic distribution of rainfall, or lack of rainfall:</p>
 
+				<div class="chart_header">Timeline of annual rainfall anomaly (mm)</div>
+
 				<div id="anomolies_block"></div>
 
 			</div>
@@ -238,6 +240,8 @@
 			<h2>How is climate change affecting drought in Australia?</h2>
 
 			<p>According to <a href="http://www.bom.gov.au/state-of-the-climate/" target="_blank">the most recent State of the Climate report</a>, Australia has already warmed by 1C since 1910. Here, you can see the trend towards <span class="darkRed">warmer years</span> over the period covered by bureau data:</p>
+
+			<div class="chart_header">Timeline of annual temperature anomaly (°C)</div>
 
 			<div id="temp_block" class="temp_block"></div>
 
