--- a/src/css/new/titles.scss
+++ b/src/css/new/titles.scss
@@ -45,6 +45,13 @@
 
 }
 
+.chart_header {
+	font-family: 'Guardian Text Sans Web', TextSans, Arial, sans-serif;
+    font-size: 20px;
+    font-weight:600;
+    margin-bottom:10px;
+}
+
 .titles h3 {
 
 	max-width: 400px;
