--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -354,6 +354,8 @@
 
 			<p>According to <a href="http://www.bom.gov.au/state-of-the-climate/" target="_blank">the most recent State of the Climate report</a>, Australia has already warmed by 1C since 1910. Here, you can see the trend towards <span class="darkRed">warmer years</span> over the period covered by bureau data:</p>
 
+			<div class="chart_header">Timeline of annual temperature anomaly (°C)</div>
+
 			<div id="temp_block" class="temp_block"></div>
 
 			<p>So how will the warming trend affect drought in Australia, and what effect has it already had? </p>
